{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 106,
  "lineage": "0d56ce4e-71d6-41a0-05c1-efceb17ce72a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:233812220516:instance/i-0f4e02daf07ef30fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "demo-project-ec2-profile",
            "id": "i-0f4e02daf07ef30fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-062b69e0309645434"
              }
            ],
            "primary_network_interface_id": "eni-062b69e0309645434",
            "private_dns": "ip-172-16-1-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.65",
            "public_dns": "ec2-100-52-174-9.compute-1.amazonaws.com",
            "public_ip": "100.52.174.9",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c66b01dfdaef1f63",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb8244a2ea99739c",
            "tags": {
              "Name": "demo-project-backend"
            },
            "tags_all": {
              "Name": "demo-project-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-032b3cd865e8bd02b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "i-0f4e02daf07ef30fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.backend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:233812220516:instance/i-09f0677277ccac048",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "demo-project-ec2-profile",
            "id": "i-09f0677277ccac048",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-043a0b03257102573"
              }
            ],
            "primary_network_interface_id": "eni-043a0b03257102573",
            "private_dns": "ip-172-16-1-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.166",
            "public_dns": "ec2-44-205-17-87.compute-1.amazonaws.com",
            "public_ip": "44.205.17.87",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9522709881c347c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb8244a2ea99739c",
            "tags": {
              "Name": "demo-project-frontend"
            },
            "tags_all": {
              "Name": "demo-project-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3dea7a675022c9e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "i-09f0677277ccac048",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.frontend_sg",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:internet-gateway/igw-044f8fec752f6b65d",
            "id": "igw-044f8fec752f6b65d",
            "owner_id": "233812220516",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-igw"
            },
            "tags_all": {
              "Name": "demo-project-igw"
            },
            "vpc_id": "vpc-0409d91e7d3d3cf1a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:route-table/rtb-0defd2fd324172192",
            "id": "rtb-0defd2fd324172192",
            "owner_id": "233812220516",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-044f8fec752f6b65d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-project-public-rt"
            },
            "tags_all": {
              "Name": "demo-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0409d91e7d3d3cf1a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "rtb-0defd2fd324172192",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bed403254d804338",
            "region": "us-east-1",
            "route_table_id": "rtb-0defd2fd324172192",
            "subnet_id": "subnet-0bb8244a2ea99739c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ab2b32d82ddce68",
            "region": "us-east-1",
            "route_table_id": "rtb-0defd2fd324172192",
            "subnet_id": "subnet-0473c8ba6f3fc69ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.demo_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_01",
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:security-group/sg-032b3cd865e8bd02b",
            "description": "Security group for backend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032b3cd865e8bd02b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "demo-project-backend-sg",
            "name_prefix": "",
            "owner_id": "233812220516",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-backend-sg"
            },
            "tags_all": {
              "Name": "demo-project-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0409d91e7d3d3cf1a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "sg-032b3cd865e8bd02b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:security-group/sg-0b3dea7a675022c9e",
            "description": "Security group for frontend EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3dea7a675022c9e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-project-frontend-sg",
            "name_prefix": "",
            "owner_id": "233812220516",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-project-frontend-sg"
            },
            "tags_all": {
              "Name": "demo-project-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0409d91e7d3d3cf1a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "sg-0b3dea7a675022c9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:subnet/subnet-0622e90d8d8c1f338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0622e90d8d8c1f338",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233812220516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pv-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pv-sub-01"
            },
            "vpc_id": "vpc-0409d91e7d3d3cf1a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "subnet-0622e90d8d8c1f338",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:subnet/subnet-0822913b5fb975bc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0822913b5fb975bc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233812220516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pv-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pv-sub-01"
            },
            "vpc_id": "vpc-0409d91e7d3d3cf1a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "subnet-0822913b5fb975bc1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:subnet/subnet-0bb8244a2ea99739c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb8244a2ea99739c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233812220516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pb-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pb-sub-01"
            },
            "vpc_id": "vpc-0409d91e7d3d3cf1a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "subnet-0bb8244a2ea99739c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:subnet/subnet-0473c8ba6f3fc69ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0473c8ba6f3fc69ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233812220516",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project-pb-sub-01"
            },
            "tags_all": {
              "Name": "demo-project-pb-sub-01"
            },
            "vpc_id": "vpc-0409d91e7d3d3cf1a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "subnet-0473c8ba6f3fc69ab",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.demo_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:233812220516:vpc/vpc-0409d91e7d3d3cf1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d2a452a184b8ee4d",
            "default_route_table_id": "rtb-004a32d10f8b8dcc1",
            "default_security_group_id": "sg-0c49769f1b02e7798",
            "dhcp_options_id": "dopt-006ba0e931a575e3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0409d91e7d3d3cf1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004a32d10f8b8dcc1",
            "owner_id": "233812220516",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-project"
            },
            "tags_all": {
              "Name": "demo-project"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "233812220516",
            "id": "vpc-0409d91e7d3d3cf1a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}